--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Sun Apr 14 21:06:01 EET 2019
+#Sun Apr 14 21:08:18 EET 2019
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
+project.dev.com.thinkerfox\:pet-clinic-data=0.0.2-SNAPSHOT
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.rel.com.thinkerfox\:pet-clinic-data=0.0.1
+project.rel.com.thinkerfox\:pet-clinic-web=0.0.1
+project.scm.com.thinkerfox\:sfg-pet-clinic.developerConnection=scm\:git\:git@github.com\:tallrye/sfg-pet-clinic.git
+project.scm.com.thinkerfox\:pet-clinic-data.empty=true
+completedPhase=run-preparation-goals
+project.dev.com.thinkerfox\:pet-clinic-web=0.0.2-SNAPSHOT
 scm.url=scm\:git\:git@github.com\:tallrye/sfg-pet-clinic.git
+project.scm.com.thinkerfox\:sfg-pet-clinic.tag=HEAD
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.dev.com.thinkerfox\:sfg-pet-clinic=0.0.2-SNAPSHOT
+scm.tag=sfg-pet-clinic-0.0.1
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.rel.com.thinkerfox\:sfg-pet-clinic=0.0.1
+project.scm.com.thinkerfox\:pet-clinic-web.empty=true
